--- a/index.html
+++ b/index.html
@@ -73,15 +73,8 @@ generations.</p>
     
         </ul>
     </div>
-<div class="products col-span-7">
-    <div class="product-card bg-white rounded-md">
-        <img src="" alt="">
-        <h6>Product Name</h6>
-        <p>Product description</p>
-        <button class="product-category">Category</button>
-        <h6>Price</h6>
-
-    </div>
+<div id="products" class="col-span-7 grid grid-cols-3 gap-4">
+   
 </div>
 <div class="cart bg-white rounded-md col-span-3">
     <h4>Your Cart</h4>
