--- a/index.html
+++ b/index.html
@@ -66,17 +66,21 @@ generations.</p>
 <section class="bg-[#F0FDF4] py-10">
     <h1 class="text-3xl text-center font-bold py-10">Choose Your Trees</h1>
 
-<div class="dashboard max-w-[1250px] mx-auto grid grid-cols-12 gap-6">
+   <div class="text-center mb-5">
+     <span id="spinner" class="hidden loading loading-dots loading-xl text-[#15803D]"></span>
+   </div>
+
+<div class="dashboard max-w-[1250px] mx-auto grid grid-cols-12 gap-6 items-start">
     <div class="categories col-span-2">
         <h4 class="text-xl font-bold mb-4">Categories</h4>
-        <ul id="category-ul">
+        <div id="category-container">
     
-        </ul>
+        </div>
     </div>
-<div id="products" class="col-span-7 grid grid-cols-3 gap-4">
+<div id="products" class="col-span-8 grid grid-cols-3 gap-4">
    
 </div>
-<div class="cart bg-white rounded-md col-span-3">
+<div class="cart col-span-2 bg-white rounded-lg self-stretch">
     <h4>Your Cart</h4>
 </div>
 </div>
