--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@ generations.</p>
      <span id="spinner" class="hidden loading loading-dots loading-xl text-[#15803D]"></span>
    </div>
 
-<div class="dashboard max-w-[1250px] mx-auto grid grid-cols-12 gap-6 items-start">
-    <div class="categories col-span-2">
+<div class="dashboard max-w-[1250px] mx-auto grid grid-cols-1 md:grid-cols-12 gap-6 items-start">
+    <div class="categories col-span-1 md:col-span-2">
         <h4 class="text-xl font-bold mb-4">Categories</h4>
         <div id="category-container">
     
         </div>
     </div>
-<div id="products" class="col-span-8 grid grid-cols-3 gap-4">
+<div id="products" class="col-span-1 md:col-span-8 grid grid-cols-1 md:grid-cols-3 gap-4">
    
 </div>
-<div class="cart col-span-2 bg-white rounded-lg self-stretch">
+<div class="cart col-span-1 md:col-span-2 bg-white rounded-lg self-stretch">
     <h4>Your Cart</h4>
 </div>
 </div>
@@ -93,7 +93,21 @@ generations.</p>
     
 
 
+<!-- modal  -->
+<dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+  <div class="modal-box">
+   <div id="modal-body">
+   
 
+   </div>
+    <div class="modal-action">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
 <script src="./scripts/script.js"></script>
 </body>
 
