--- a/index.html
+++ b/index.html
@@ -80,8 +80,15 @@ generations.</p>
 <div id="products" class="col-span-1 md:col-span-8 grid grid-cols-1 md:grid-cols-3 gap-4">
    
 </div>
-<div class="cart col-span-1 md:col-span-2 bg-white rounded-lg self-stretch">
-    <h4>Your Cart</h4>
+<div class="cart col-span-1 md:col-span-2 bg-white rounded-lg self-stretch p-3">
+    <h4 class="text-xl font-bold mb-4">Your Cart</h4>
+    <div id="cart-container">
+     <h3 class="text-center text-gray-500 font-semibold">Cart is empty</h3>
+      
+    </div>
+    <div class="flex justify-end" id="cart-total-container">
+      
+      </div>
 </div>
 </div>
 </section>
