added about section

--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@ generations.</p>
       </div>
 </header>
  
-<main >
-<section class="bg-[#F0FDF4] py-10">
+<main class="bg-[#F0FDF4]">
+
+  <!-- dashboard  -->
+<section class=" py-10">
     <h1 class="text-3xl text-center font-bold py-10">Choose Your Trees</h1>
 
    <div class="text-center mb-5">
@@ -92,6 +94,30 @@ generations.</p>
 </div>
 </div>
 </section>
+
+<!-- about section  -->
+ <section class="about-section pb-10">
+   <h1 class="text-3xl text-center font-bold py-10">About the Campaign</h1>
+    <div class="about-container flex items-center max-w-[1250px] mx-auto gap-8">
+  <div class="w-6/8">
+    <img src="./assets/about.png" alt="">
+  </div>
+  <div>
+    <p>Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.</p>
+    <ol class="list-disc px-6 py-4">
+      <li>Restoration of natural habitats</li>
+      <li>Improvement of air quality</li>
+      <li>Support for local communities</li>
+    </ol>
+  </div>
+ </div>
+ </section>
+
+<!-- our impact section  -->
+ <section>
+   <h1 class="text-3xl text-center font-bold py-10">Our Impact</h1>
+ </section>
+
 </main>
 
 <footer>
