added our impact section

--- a/index.html
+++ b/index.html
@@ -114,8 +114,24 @@ generations.</p>
  </section>
 
 <!-- our impact section  -->
- <section>
+ <section class="bg-[#CFF0DC] pb-10">
    <h1 class="text-3xl text-center font-bold py-10">Our Impact</h1>
+
+   <div class="impact-container flex justify-around max-w-[1250px] mx-auto">
+<div class="bg-white rounded-lg w-[25%] flex flex-col items-center justify-center py-5">
+  <h3 class="text-4xl text-[#15803D]">500K+</h3>
+  <p class="mt-2">Trees Planted</p>
+</div>
+<div class="bg-white rounded-lg w-[25%] flex flex-col items-center justify-center py-5">
+  <h3 class="text-4xl text-[#15803D]">500K+</h3>
+  <p class="mt-2">Trees Planted</p>
+</div>
+<div class="bg-white rounded-lg w-[25%] flex flex-col items-center justify-center py-5">
+  <h3 class="text-4xl text-[#15803D]">500K+</h3>
+  <p class="mt-2">Trees Planted</p>
+</div>
+
+   </div>
  </section>
 
 </main>
