--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@ generations.</p>
   <p class="mt-2">Trees Planted</p>
 </div>
 <div class="bg-white rounded-lg w-[25%] flex flex-col items-center justify-center py-5">
-  <h3 class="text-4xl text-[#15803D]">500K+</h3>
-  <p class="mt-2">Trees Planted</p>
+  <h3 class="text-4xl text-[#15803D]">120+</h3>
+  <p class="mt-2">Communities Involved</p>
 </div>
 <div class="bg-white rounded-lg w-[25%] flex flex-col items-center justify-center py-5">
-  <h3 class="text-4xl text-[#15803D]">500K+</h3>
-  <p class="mt-2">Trees Planted</p>
+  <h3 class="text-4xl text-[#15803D]">30+</h3>
+  <p class="mt-2">Countries Reached</p>
 </div>
 
    </div>
@@ -136,8 +136,23 @@ generations.</p>
 
 </main>
 
-<footer>
+<footer class="bg-[#166534]">
+ <h1 class="text-3xl text-center font-bold py-10 text-white">Plant a Tree Today</h1>
 
+ <div class="w-[25%] mx-auto p-5 rounded-lg bg-[#15803D] mb-20">
+ <input  type="text" class="input w-full" placeholder="Your Name" />
+ <br>
+ <input type="email" class="input w-full my-4" placeholder="Your Email Address" />
+ <br>
+ <select class="select select-ghost w-full bg-white">
+  <option disabled selected>Number of Trees</option>
+  <option>100 Trees</option>
+  <option>500 Trees</option>
+  <option>2000 Trees</option>
+</select>
+<button class="bg-[#FACC15] text-[#15803D] w-full my-4 p-2 rounded-full">Donate Now</button>
+ </div>
+<div class="bg-[#14532D] text-white text-center p-5 font-light"><p>© 2025 Green Earth. All Rights Reserved.</p></div>
 </footer>
     
 
