--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
      <!-- hero banner  -->
       <div class="bg-[#CFF0DC]">
- <div class="hero-banner flex flex-col md:flex-row justify-between items-center max-w-[1500px] mx-auto">
+ <div class="hero-banner flex flex-col md:flex-row justify-between items-center max-w-[1500px] mx-auto px-2 md:px-0">
         <img src="./assets/hero-leaf1.png"  class="w-[400px] hidden md:block" alt="">
         <div class="text-center my-4">
             <h1 class="text-2xl md:text-4xl font-bold">Plant a Tree, Grow a Future</h1>
@@ -65,7 +65,7 @@ generations.</p>
 <main class="bg-[#F0FDF4]">
 
   <!-- dashboard  -->
-<section class=" py-10">
+<section class=" py-10 px-2 md:px-0">
     <h1 class="text-3xl text-center font-bold py-10">Choose Your Trees</h1>
 
    <div class="text-center mb-5">
@@ -96,9 +96,9 @@ generations.</p>
 </section>
 
 <!-- about section  -->
- <section class="about-section pb-10">
-   <h1 class="text-3xl text-center font-bold py-10">About the Campaign</h1>
-    <div class="about-container flex items-center max-w-[1250px] mx-auto gap-8">
+ <section class="about-section pb-10 px-2 md:px-0">
+   <h1 class="text-3xl text-center font-bold py-10 ">About the Campaign</h1>
+    <div class="about-container flex flex-col md:flex-row items-center max-w-[1250px] mx-auto gap-8">
   <div class="w-6/8">
     <img src="./assets/about.png" alt="">
   </div>
@@ -114,19 +114,19 @@ generations.</p>
  </section>
 
 <!-- our impact section  -->
- <section class="bg-[#CFF0DC] pb-10">
+ <section class="bg-[#CFF0DC] py-10 px-2 md:px-0">
    <h1 class="text-3xl text-center font-bold py-10">Our Impact</h1>
 
-   <div class="impact-container flex justify-around max-w-[1250px] mx-auto">
-<div class="bg-white rounded-lg w-[25%] flex flex-col items-center justify-center py-5">
+   <div class="impact-container flex flex-col gap-5 items-center md:flex-row md:justify-around max-w-[1250px] mx-auto mb-10">
+<div class="bg-white rounded-lg w-full md:w-[25%] flex flex-col items-center justify-center py-5">
   <h3 class="text-4xl text-[#15803D]">500K+</h3>
   <p class="mt-2">Trees Planted</p>
 </div>
-<div class="bg-white rounded-lg w-[25%] flex flex-col items-center justify-center py-5">
+<div class="bg-white rounded-lg w-full md:w-[25%] flex flex-col items-center justify-center py-5">
   <h3 class="text-4xl text-[#15803D]">120+</h3>
   <p class="mt-2">Communities Involved</p>
 </div>
-<div class="bg-white rounded-lg w-[25%] flex flex-col items-center justify-center py-5">
+<div class="bg-white rounded-lg w-full md:w-[25%] flex flex-col items-center justify-center py-5">
   <h3 class="text-4xl text-[#15803D]">30+</h3>
   <p class="mt-2">Countries Reached</p>
 </div>
@@ -136,10 +136,10 @@ generations.</p>
 
 </main>
 
-<footer class="bg-[#166534]">
+<footer class="bg-[#166534] px-2 md:px-0">
  <h1 class="text-3xl text-center font-bold py-10 text-white">Plant a Tree Today</h1>
 
- <div class="w-[25%] mx-auto p-5 rounded-lg bg-[#15803D] mb-20">
+ <div class="w-full md:w-[25%] mx-auto p-5 rounded-lg bg-[#15803D] mb-20">
  <input  type="text" class="input w-full" placeholder="Your Name" />
  <br>
  <input type="email" class="input w-full my-4" placeholder="Your Email Address" />
