added active class

--- a/index.html
+++ b/index.html
@@ -96,22 +96,26 @@ generations.</p>
 </section>
 
 <!-- about section  -->
- <section class="about-section pb-10 px-2 md:px-0">
-   <h1 class="text-3xl text-center font-bold py-10 ">About the Campaign</h1>
-    <div class="about-container flex flex-col md:flex-row items-center max-w-[1250px] mx-auto gap-8">
-  <div class="w-6/8">
-    <img src="./assets/about.png" alt="">
+<section class="about-section pb-10 px-2 md:px-0">
+  <div class="max-w-[1250px] mx-auto">
+    <div class="w-full md:w-8/12 mx-auto">
+      <h1 class="text-3xl text-center font-bold py-10">About the Campaign</h1>
+      <div class="about-container flex flex-col md:flex-row items-center gap-8">
+        <div class="md:w-1/2">
+          <img src="./assets/about.png" alt="">
+        </div>
+        <div class="md:w-1/2 text-gray-600">
+          <p>Green Earth is a global tree plantation initiative dedicated to fighting climate change...</p>
+          <ol class="list-disc px-6 py-4">
+            <li>Restoration of natural habitats</li>
+            <li>Improvement of air quality</li>
+            <li>Support for local communities</li>
+          </ol>
+        </div>
+      </div>
+    </div>
   </div>
-  <div>
-    <p>Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.</p>
-    <ol class="list-disc px-6 py-4">
-      <li>Restoration of natural habitats</li>
-      <li>Improvement of air quality</li>
-      <li>Support for local communities</li>
-    </ol>
-  </div>
- </div>
- </section>
+</section>
 
 <!-- our impact section  -->
  <section class="bg-[#CFF0DC] py-10 px-2 md:px-0">
